# leviathan-sparring-lab

./: .env.lab.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  ENGAGEMENT-LOG.md  GONXA-BRIEFING.md  HANDOFF.md  HARDENING-LADDER.md  MASTER-PROMPT-V3.md  Makefile  README.md  STATE.md  THREAT-MODEL.md  VULN-CATALOG.md  docker-compose.lean.yml  lab.yaml  postmortem-template.md  vultr-deploy-plan.md
ansible/: ansible.cfg  site.yml
ansible/templates/: 99-levlab-hardening.conf.j2  99-levlab.conf.j2  cloudflared-config.yml.j2  daemon.json.j2  nftables.conf.j2
deploy/data/: postgres-seed.sql  seed-services.sh
docs/: 00-overview.md  01-architecture.md  02-infrastructure.md  03-hardening.md  04-zoo-targets.md  05-ground-truth.md  06-observability.md  07-roe.md  08-runbook.md  09-metrics-scoring.md  10-postmortem.md  11-operations.md  12-checklists.md  13-credentials-guide.md  14-defense-playbook.md  15-tech-stack-vulns.md  16-blue-team-loki-queries.md
frontend/: .eslintrc.json  Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
ground_truth/: ground_truth.yml
infra/: docker-compose.yml
legacy/: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
scripts/: bootstrap.sh  build-scoreboard.py  export-artifacts.sh  generate-wg-keys.sh  gt-rotate.sh  kill.sh  lab-down.sh  reconcile.py  smoke.sh  teardown.sh  triage.py  triage.sh  validate-ground-truth.py  vultr-preflight.sh
services/_shared/: README.md  pyproject.toml
services/_shared/melispy_shared/: __init__.py  audit.py  auth.py  db.py  models.py  policies.py  rate_limit.py  tracing.py
services/_shared/tests/: conftest.py  test_audit.py  test_auth.py  test_rate_limit.py
services/auth-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/auth-service/alembic/versions/: 0001_initial.py
services/auth-service/app/: __init__.py  config.py  main.py
services/auth-service/app/crud/: __init__.py  tokens.py  users.py
services/auth-service/app/models/: __init__.py  base.py  oauth.py  session.py  token.py  user.py
services/auth-service/app/routes/: auth.py  health.py  legacy.py  magic.py  oauth.py  sessions.py
services/auth-service/app/schemas/: __init__.py  auth.py
services/auth-service/tests/: conftest.py  test_forgot.py  test_health.py  test_legacy.py  test_login.py  test_magic.py  test_oauth.py  test_refresh.py  test_signup.py  test_verify.py
services/billing-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/billing-service/alembic/versions/: 0001_initial.py
services/billing-service/app/: config.py  main.py
services/billing-service/app/crud/: carts.py  checkouts.py  coupons.py  invoices.py  plans.py
services/billing-service/app/models/: __init__.py  cart.py  checkout.py  coupon.py  invoice.py  payment.py  plan.py
services/billing-service/app/routes/: billing.py  coupons.py  health.py  invoices.py  plans.py
services/billing-service/app/schemas/: billing.py  invoices.py
services/billing-service/tests/: conftest.py  test_cart.py  test_checkout.py  test_coupons.py  test_health.py  test_invoices.py  test_plans.py  test_v_t4_001_race.py  test_v_t4_002_coupon_stack.py  test_v_t4_011_negative.py
services/cloud-metadata-sim/: Dockerfile  README.md  pyproject.toml
services/cloud-metadata-sim/app/: config.py  credentials.py  main.py
services/cloud-metadata-sim/app/routes/: metadata.py
services/cloud-metadata-sim/tests/: conftest.py  test_metadata.py  test_v_t8_001_imds_v1_unauthenticated.py
services/llm-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/llm-service/alembic/versions/: 0001_initial.py
services/llm-service/app/: config.py  main.py
services/llm-service/app/crud/: conversations.py
services/llm-service/app/models/: __init__.py  conversation.py  message.py
services/llm-service/app/routes/: llm.py
services/llm-service/app/schemas/: llm.py
services/llm-service/tests/: conftest.py  test_conversations.py  test_health.py  test_v_t5_002_alg_confusion.py  test_v_t5_003_kid_traversal.py  test_v_t6_003_idor.py
services/notifications-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/notifications-service/alembic/versions/: 0001_initial.py
services/notifications-service/app/: __init__.py  config.py  database.py  main.py
services/notifications-service/app/models/: __init__.py  base.py  notification.py
services/notifications-service/app/routes/: __init__.py  notifications.py
services/notifications-service/app/schemas/: __init__.py  notifications.py
services/notifications-service/app/services/: minio_client.py  templates.py
services/notifications-service/db/: __init__.py
services/notifications-service/db/seed/: __init__.py  notification_templates.py
services/notifications-service/tests/: conftest.py  test_notifications.py
services/uploads-service/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/uploads-service/alembic/: env.py
services/uploads-service/alembic/versions/: 0001_create_uploads.py
services/uploads-service/app/: __init__.py  auth.py  config.py  main.py  minio_client.py  models.py  schemas.py
services/uploads-service/app/routers/: __init__.py  health.py  uploads.py
services/uploads-service/tests/: conftest.py  test_uploads.py
services/webhooks-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/webhooks-service/alembic/: env.py
services/webhooks-service/alembic/versions/: 0001_initial.py
services/webhooks-service/app/: __init__.py  config.py  main.py
services/webhooks-service/app/crud/: __init__.py  webhooks.py
services/webhooks-service/app/models/: __init__.py  delivery.py  webhook.py
services/webhooks-service/app/routes/: __init__.py  webhooks.py
services/webhooks-service/app/schemas/: __init__.py  webhooks.py
services/webhooks-service/app/services/: queue.py  signing.py  url_validation.py
services/webhooks-service/tests/: conftest.py  test_webhooks.py
targets/: catalog.yml
terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
(+386 files in other folders)
