[project]
name = "melispy-shared"
version = "0.1.0"
description = "Shared Python primitives for Melispy v3 services."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "asyncpg",
    "httpx",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "pydantic>=2",
    "pyjwt[crypto]",
    "redis",
    "sqlalchemy[asyncio]",
    "structlog",
]

[dependency-groups]
dev = [
    "aiosqlite",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["melispy_shared", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "S105", "S106", "S608"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
