[project]
name = "melispy-llm-service"
version = "0.1.0"
description = "Melispy v3 LLM service."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "melispy-shared",
    "pydantic-settings",
    "pyjwt[crypto]",
    "sqlalchemy[asyncio]",
    "structlog",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "aiosqlite",
    "cryptography",
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.uv]
package = false

[tool.uv.sources]
melispy-shared = { path = "../_shared", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "S105", "S106", "S608"]

[tool.ruff.lint.per-file-ignores]
"app/routes/llm.py" = ["ASYNC230", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "melispy_shared"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
