[project]
name = "melispy-notifications-service"
version = "0.1.0"
description = "Melispy v3 notifications service."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "jinja2",
    "melispy-shared",
    "minio",
    "pydantic-settings",
    "python-jose",
    "sqlalchemy[asyncio]",
    "structlog",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "aiosqlite",
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
melispy-shared = { path = "../_shared", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "db", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
